Fix double shadow

--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ article > h1:first-child::before {
 		text-shadow: 2px 2px 9px #000000;
 	}
 	
-	.post:after {
+	header.post:after {
 		content: "";
 		background: linear-gradient(to bottom, #000d 0%, transparent 100%);
 		position: absolute;
