--- a/res/html/main.css
+++ b/res/html/main.css
@@ -78,7 +78,7 @@ a {
 	padding-top: 6px;
 	padding-bottom: 4px;
 	font-size: 17px;
-	display: inline-block;
+	display: block;
 	position: relative;
 }
 
